Fix text cutoff

--- a/modules/xerte/parent_templates/Nottingham/models_html5/opinion.css
+++ b/modules/xerte/parent_templates/Nottingham/models_html5/opinion.css
@@ -1,5 +1,8 @@
 /* opinion.html */
 
+#canvas-container {
+  margin: 0 auto;
+}
 
     .qPanel {
     overflow:	auto;
